# voice-chat

./: .gitignore  API_DOCUMENTATION.md  BACKEND_COMPLETION_SUMMARY.md  ROADMAP.md
backend/: Cargo.toml  README.md  config.toml  config_loopback.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
backend/src/api/: advanced.rs  metrics.rs  mod.rs
backend/src/audio/: buffer.rs  metrics.rs  mixer.rs  mod.rs  packet.rs  performance.rs  router.rs  server.rs
backend/src/handlers/: api.rs  api.rs.backup  mod.rs  websocket.rs
backend/src/models/: audio.rs  channel.rs  message.rs  mod.rs  user.rs
backend/src/networking/: mod.rs  udp.rs  websocket.rs
backend/src/services/: audio_service.rs  channel_service.rs  mod.rs  user_service.rs
frontend/: package.json
frontend/src/: app.js  index.html  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/audio/: capture.rs  devices.rs  mod.rs  playback.rs
frontend/src-tauri/src/networking/: http.rs  mod.rs  udp.rs  websocket.rs
frontend/src-tauri/src/state/: mod.rs
frontend/src/components/: pages.css
frontend/src/pages/: LoginPage.js  MainPage.js
frontend/src/utils/: dom.js  tauri.js
